Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-32484

Intermittent timeout of memcached_testapp tests in CV

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      The last test seemingly hits the time cap for running the tests (I assume this is 300s). This has been happening frequently with 15 instances in the last 100 CV runs of linux-master.

      190/190 Test #116: memcached_testapp.default.TransportProtocols/DurabilityTest ..................***Timeout 300.09 sec
      ...
      Total Test time (real) = 616.01 sec 
      The following tests FAILED: 16:20:59 116 - memcached_testapp.default.TransportProtocols/DurabilityTest (Timeout)
      

      In looking further into this issue, the test appear as 190/190 (or sometimes 2 so 189/190) as due to the time out they are the last to finish. However, it is not the 190th test as denoted in the example above by #116. This number varies but for linux-master it is currently commonly around the 117±20 range.

      Now seen on both linux and windows cv machines

      See comments for recent instances

       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              drigby Dave Rigby (Inactive)
              christopher.farman christopher farman (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty